# xcommand

./: .coveragerc  .flake8  .xproject_python  Makefile  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yml
toolkit/: memory.py
xargproject/: project.py
xargproject/unittest/: test_command.py  test_project.py
xkits_command/: actuator.py  attribute.py  parser.py
xkits_command/unittest/: test_actuator.py  test_parser.py
